RESOLVED FIXED229097
REGRESSION (r281012): WebInspector console no longer shows script integrity information
https://bugs.webkit.org/show_bug.cgi?id=229097
Summary REGRESSION (r281012): WebInspector console no longer shows script integrity i...
Brent Fulgham
Reported 2021-08-13 14:16:48 PDT
Restore console logging about script integrity information after Bug 228861.
Attachments
Patch (1.73 KB, patch)
2021-08-13 14:19 PDT, Brent Fulgham
no flags
Patch (2.95 KB, patch)
2021-08-13 15:35 PDT, Brent Fulgham
no flags
Patch for landing (12.62 KB, patch)
2021-08-16 11:00 PDT, Brent Fulgham
no flags
Radar WebKit Bug Importer
Comment 1 2021-08-13 14:17:26 PDT
Brent Fulgham
Comment 2 2021-08-13 14:19:16 PDT
Brent Fulgham
Comment 3 2021-08-13 15:35:31 PDT
youenn fablet
Comment 4 2021-08-16 10:01:45 PDT
Comment on attachment 435523 [details] Patch Please update test expectations before landing
Brent Fulgham
Comment 5 2021-08-16 11:00:31 PDT
Created attachment 435618 [details] Patch for landing
EWS
Comment 6 2021-08-16 12:02:00 PDT
Committed r281097 (240556@main): <https://commits.webkit.org/240556@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435618 [details].
Note You need to log in before you can comment on or make changes to this bug.