REGRESSION (r281012): WebInspector console no longer shows script integrity information https://bugs.webkit.org/show_bug.cgi?id=229097 <rdar://problem/81915909>

Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/scripting-1/the-script-element/module/integrity-expected.txt:

Source/WebCore:

* bindings/js/ScriptModuleLoader.cpp:
(WebCore::ScriptModuleLoader::notifyFinished): Add full console message during promise rejection.
* loader/DocumentThreadableLoader.cpp:
(WebCore::DocumentThreadableLoader::reportIntegrityMetadataError): Treat integrity mismatch as
a ResourceError::Type::AccessControl so that it gets detailed console logging.

LayoutTests:

* http/tests/subresource-integrity/sri-fetch-expected.txt:
* http/tests/subresource-integrity/sri-module-expected.txt:
* js/dom/modules/module-fetch-failure-not-cached-expected.txt:


Canonical link: https://commits.webkit.org/240556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281097 268f45cc-cd09-0410-ab3c-d52691b4dbfc